# pdfProcessing

./: Dockerfile  main.py  pyproject.toml
static/: auto.json  auto_PIP.json  auto_UM.json  auto_coverage.json  auto_exclusions.json  auto_general.json  auto_liability.json  auto_physical.json  fire.json  fire_amendment.json  fire_covered.json  fire_deductible.json  fire_next_steps.json  fire_not_covered.json  hail_amendment.json  hail_covered.json  hail_deductible.json  hail_next_steps.json  hail_not_covered.json  hail_wind.json  index.html  lexxari.css  policy_details.json  wind_amendment.json  wind_covered.json  wind_deductible.json  wind_next_steps.json  wind_not_covered.json
