[project]
name = "11-2025-learning-pdfprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "ibm-watsonx-ai>=1.4.4",
    "ibmcloud>=0.1.0",
    "pydantic>=2.12.3",
    "pypdf>=6.1.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
